--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
   <nav class="hidden md:flex gap-8 text-sm text-slate-600">
     <a href="#" class="hover:text-blue-600">Home</a>
-    <a href="admin.html" class="hover:text-blue-600">Admin</a>
-    <a href="#" class="hover:text-blue-600">Contact</a>
+    <!-- <a href="admin.html" class="hover:text-blue-600">Admin</a>
+    <a href="#" class="hover:text-blue-600">Contact</a> -->
   </nav>
 </header>
 
@@ -67,12 +67,12 @@
             Find My Route
           </button>
 
-          <a
+          <!-- <a
             href="#info"
             class="px-6 py-3 rounded-xl border border-slate-300 hover:bg-slate-50 transition"
           >
             How it works
-          </a>
+          </a> -->
         </div>
 
         <p id="error" class="text-sm text-red-600 hidden"></p>
