--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 
   <nav class="hidden md:flex gap-8 text-sm text-slate-600">
-    <a href="#" class="hover:text-blue-600">Home</a>
-    <!-- <a href="admin.html" class="hover:text-blue-600">Admin</a>
+    <!-- <a href="#" class="hover:text-blue-600">Home</a>
+    <a href="admin.html" class="hover:text-blue-600">Admin</a>
     <a href="#" class="hover:text-blue-600">Contact</a> -->
   </nav>
 </header>
@@ -34,7 +34,7 @@
     <div class="space-y-8">
       <div class="space-y-4">
         <h1 class="text-4xl md:text-5xl font-bold leading-tight">
-          Find the <span class="text-blue-600">best shuttle</span><br />
+          Find the <span class="text-[#76c044]">best shuttle</span><br />
           from your nearest stop
         </h1>
 
@@ -62,28 +62,21 @@
         <div class="flex gap-4">
           <button
             id="findBtn"
-            class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-xl font-medium transition"
+            class="bg-[#76c044] hover:bg-blue-700 text-white px-6 py-3 rounded-xl font-medium transition"
           >
             Find My Route
           </button>
-
-          <!-- <a
-            href="#info"
-            class="px-6 py-3 rounded-xl border border-slate-300 hover:bg-slate-50 transition"
-          >
-            How it works
-          </a> -->
         </div>
 
         <p id="error" class="text-sm text-red-600 hidden"></p>
       </div>
     </div>
 
-    <div class="bg-blue-100 rounded-3xl p-10 space-y-3">
-      <p class="text-blue-700 font-semibold text-xl">
+    <div class="bg-[#76c044] rounded-3xl p-10 space-y-3">
+      <p class="text-white font-semibold text-xl">
         Safe • Reliable • Student-first
       </p>
-      <p class="text-blue-600 text-sm">
+      <p class="text-white text-sm">
         Optimized routes • Local drivers • Daily commute made easy
       </p>
     </div>
