--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="flex gap-4">
           <button
             id="findBtn"
-            class="bg-[#76c044] hover:bg-blue-700 text-white px-6 py-3 rounded-xl font-medium transition"
+            class="bg-[#76c044] hover:bg-[#7EB359] text-white px-6 py-3 rounded-xl font-medium transition"
           >
             Find My Route
           </button>
