--- a/index.html
+++ b/index.html
@@ -4,67 +4,54 @@
   <meta charset="UTF-8" />
   <title>Kavya Shuttle</title>
   <script src="https://cdn.tailwindcss.com"></script>
-      <link rel="shortcut icon" href="https://kavyaschool.edu.np/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="https://kavyaschool.edu.np/favicon.ico" type="image/x-icon">
 </head>
 
 <body class="bg-slate-100 text-slate-800">
 
+<!-- HEADER -->
 <header class="max-w-7xl mx-auto px-6 py-6 flex items-center justify-between">
-<div class="flex items-center gap-3">
-  <img
-    src="https://kavyaschool.edu.np/images/Kavya-Ing.svg"
-    alt="Kavya School"
-    class="h-8 w-auto object-contain"
-  />
-</div>
-
-
-  <nav class="hidden md:flex gap-8 text-sm text-slate-600">
-    <!-- <a href="#" class="hover:text-blue-600">Home</a>
-    <a href="admin.html" class="hover:text-blue-600">Admin</a>
-    <a href="#" class="hover:text-blue-600">Contact</a> -->
-  </nav>
+  <div class="flex items-center gap-3">
+    <img
+      src="https://kavyaschool.edu.np/images/Kavya-Ing.svg"
+      class="h-12 w-auto object-contain"
+      alt="Kavya Logo"
+    />
+  </div>
 </header>
 
-<!-- HERO -->
 <main class="max-w-7xl mx-auto px-6 mt-10">
-  <div class="bg-white rounded-[32px] shadow-xl px-10 py-14 grid lg:grid-cols-2 gap-16 items-center">
+  <div class="bg-white rounded-[32px] shadow-xl px-8 md:px-12 py-14 md:py-20 min-h-[70vh] grid md:grid-cols-2 gap-10 md:gap-16 items-center">
 
-    <!-- LEFT -->
-    <div class="space-y-8">
-      <div class="space-y-4">
-        <h1 class="text-4xl md:text-5xl font-bold leading-tight">
-          Find the <span class="text-[#76c044]">best shuttle</span><br />
-          from your nearest stop
-        </h1>
+    <!-- LEFT TEXT -->
+    <div class="space-y-6">
+      <h1 class="text-4xl md:text-5xl font-bold leading-tight">
+        Find the <span class="text-[#76c044]">best shuttle</span><br/>
+        from your nearest stop
+      </h1>
 
-        <p class="text-slate-600 max-w-md">
-          A smart shuttle route finder designed exclusively for Kavya
-          School +2 students. Search by location or let us find the
-          nearest route for you.
-        </p>
-      </div>
+      <p class="text-slate-600 max-w-md">
+        A smart shuttle route finder designed exclusively for Kavya School +2 students.
+      </p>
 
       <div class="space-y-4 max-w-md">
+        <input id="searchInput"
+          type="text"
+          placeholder="Type your nearest location (e.g. Gatthaghar)"
+          class="hidden w-full px-4 py-3 rounded-xl border border-slate-300 focus:ring-2 focus:ring-blue-500 outline-none transition"/>
 
-<input
-  id="searchInput"
-  type="text"
-  placeholder="Type your nearest location (e.g. Gatthaghar)"
-  class="hidden w-full px-4 py-3 rounded-xl border border-slate-300 focus:ring-2 focus:ring-blue-500 outline-none transition"
-/>
+        <div id="suggestions"
+          class="hidden mt-2 bg-white border border-slate-200 rounded-xl shadow overflow-hidden"></div>
 
-<div
-  id="suggestions"
-  class="hidden mt-2 bg-white border border-slate-200 rounded-xl shadow overflow-hidden"
-></div>
-
-        <div class="flex gap-4">
-          <button
-            id="findBtn"
-            class="bg-[#76c044] hover:bg-[#7EB359] text-white px-6 py-3 rounded-xl font-medium transition"
-          >
+        <div class="flex flex-wrap gap-4">
+          <button id="findBtn"
+            class="bg-[#76c044] hover:bg-[#7EB359] text-white px-6 py-3 rounded-xl font-medium transition">
             Find My Route
+          </button>
+
+          <button id="locationBtn"
+            class="bg-[#76c044] hover:bg-slate-800 text-white px-6 py-3 rounded-xl font-medium transition">
+            Use Current Location
           </button>
         </div>
 
@@ -72,44 +59,48 @@
       </div>
     </div>
 
-    <div class="bg-[#76c044] rounded-3xl p-10 space-y-3">
-      <p class="text-white font-semibold text-xl">
-        Safe • Reliable • Student-first
-      </p>
-      <p class="text-white text-sm">
-        Optimized routes • Local drivers • Daily commute made easy
-      </p>
+    <!-- HERO IMAGE / PLACEHOLDER -->
+    <div class="bg-slate-200 rounded-3xl w-full h-[260px] md:h-[360px] flex items-center justify-center">
+      <img src="/kavyashuttle.png" alt="Van Image">
     </div>
-
   </div>
 </main>
 
-<section id="info" class="max-w-6xl mx-auto px-6 mt-20 mb-24">
-  <div class="grid md:grid-cols-3 gap-8">
 
-    <div class="bg-white rounded-2xl p-8 shadow text-center space-y-3">
+<section id="info" class="max-w-7xl mx-auto px-6 mt-16 mb-24">
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-6 md:gap-10">
+
+    <div class="bg-white rounded-2xl p-8 shadow-lg text-center space-y-3 border border-slate-100">
       <h3 class="font-semibold text-lg">Search by location</h3>
       <p class="text-sm text-slate-600">
-        Type a few letters and get smart route suggestions instantly.
+        Type a few letters and get instant suggestions.
       </p>
     </div>
 
-    <div class="bg-white rounded-2xl p-8 shadow text-center space-y-3">
+    <div class="bg-white rounded-2xl p-8 shadow-lg text-center space-y-3 border border-slate-100">
       <h3 class="font-semibold text-lg">Use GPS</h3>
       <p class="text-sm text-slate-600">
         Automatically detects your nearest pickup point.
       </p>
     </div>
 
-    <div class="bg-white rounded-2xl p-8 shadow text-center space-y-3">
+    <div class="bg-white rounded-2xl p-8 shadow-lg text-center space-y-3 border border-slate-100">
       <h3 class="font-semibold text-lg">Verified routes</h3>
       <p class="text-sm text-slate-600">
-        Official school shuttles with driver details.
+        Official school shuttles with verified routes.
       </p>
     </div>
 
   </div>
 </section>
+
+<footer class="bg-white text-center py-8 border-t">
+  <p class="text-slate-600 font-medium">
+    Made with 💝 by Students at Kavya School
+  </p>
+</footer>
+
+
 
 <script src="app.js"></script>
 
@@ -120,6 +111,7 @@ document.getElementById("findBtn").onclick = () => {
   input.focus();
 };
 </script>
+
 
 </body>
 </html>
