--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ShuttleSense</title>
+  <title>Kavya Shuttle</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="shortcut icon" href="https://kavyaschool.edu.np/favicon.ico">
 </head>
@@ -13,7 +13,7 @@
 <!-- HEADER -->
 <header class="sticky top-0 backdrop-blur-sm z-50">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4">
-    <div class="flex items-center justify-between">
+    <div class="flex items-center justify-center sm:justify-start">
       <div class="flex items-center gap-3">
         <img
           src="https://kavyaschool.edu.np/images/Kavya-Ing.svg"
@@ -26,16 +26,16 @@
 </header>
 
 <!-- HERO SECTION -->
-<main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 sm:py-8 lg:py-12">
+<main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-2 sm:py-4 lg:py-6">
   <div class="bg-white rounded-3xl sm:rounded-[32px] lg:rounded-[40px] shadow-2xl overflow-hidden">
     
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-0">
 
       <!-- TEXT CONTENT -->
-      <div class="px-6 py-8 sm:px-8 sm:py-10 lg:px-12 lg:py-16 flex flex-col justify-center">
-        <div class="space-y-6 sm:space-y-8">
+      <div class="px-6 pt-4 pb-6 sm:px-8 sm:pt-6 sm:pb-5 lg:px-12 lg:pt-8 lg:pb-6 flex flex-col justify-center">
+        <div class="space-y-5 sm:space-y-8">
           
-          <div class="space-y-3 sm:space-y-4">
+          <div class="space-y-3 sm:space-y-4 mb-6 sm:mb-8">
             <h1 class="text-3xl sm:text-4xl lg:text-5xl xl:text-6xl font-bold leading-tight text-slate-900">
               Find the <span class="text-[#76c044]">best shuttle</span><br class="hidden sm:inline">
               from your nearest stop
@@ -85,10 +85,10 @@
       </div>
 
       <!-- IMAGE -->
-      <div class="w-full bg-gradient-to-br from-slate-50 to-slate-100 p-6 sm:p-8 lg:p-12 flex items-center justify-center">
+      <div class="w-full bg-gradient-to-br from-slate-50 to-slate-100 p-[10px] flex items-center justify-center">
         <img
           src="/kavyashuttle.png"
-          class="rounded-2xl sm:rounded-3xl w-full max-w-md lg:max-w-lg object-contain drop-shadow-2xl"
+          class="rounded-2xl sm:rounded-3xl w-full max-w-xs sm:max-w-sm lg:max-w-md object-contain drop-shadow-2xl"
           alt="Shuttle Van"
         />
       </div>
@@ -132,7 +132,7 @@
 <footer class="bg-white border-t border-slate-200 mt-8 sm:mt-12">
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6 sm:py-8 text-center">
     <p class="text-sm sm:text-base text-slate-600 font-medium">
-      Made with 💝 by Students from Kavya School
+      Made with 💚 by Students at Kavya School
     </p>
   </div>
 </footer>
