--- a/route.html
+++ b/route.html
@@ -1,18 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Route Details</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Route Details - Kavya Shuttle</title>
   <script src="https://cdn.tailwindcss.com"></script>
-      <link rel="shortcut icon" href="https://kavyaschool.edu.np/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="https://kavyaschool.edu.np/favicon.ico" type="image/x-icon">
 </head>
 
-<body class="bg-slate-100 min-h-screen p-6">
+<body class="bg-gradient-to-br from-slate-50 to-slate-100 min-h-screen">
 
-<a href="index.html" class="text-blue-600 text-sm mb-4 inline-block">
-← Back to Home
-</a>
+<!-- HEADER -->
+<header class="backdrop-blur-sm">
+  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4">
+    <div class="flex items-center justify-center sm:justify-start">
+      <div class="flex items-center gap-3">
+        <img
+          src="https://kavyaschool.edu.np/images/Kavya-Ing.svg"
+          class="h-10 sm:h-12 md:h-14 w-auto object-contain"
+          alt="Kavya Logo"
+        />
+      </div>
+    </div>
+  </div>
+</header>
 
-<div id="routeBox" class="max-w-2xl mx-auto bg-white rounded-2xl shadow p-6"></div>
+<!-- BACK BUTTON -->
+<div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 pt-4 pb-2">
+  <a 
+    href="index.html" 
+    class="inline-flex items-center gap-2 text-sm sm:text-base text-slate-600 hover:text-slate-900 transition font-medium"
+  >
+    ← Back to Home
+  </a>
+</div>
+
+<!-- ROUTE DETAILS -->
+<main class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 py-4 sm:py-6 pb-8">
+  <div id="routeBox" class="bg-white rounded-3xl sm:rounded-[32px] shadow-2xl p-6 sm:p-8 lg:p-10">
+    <!-- Content loaded by JavaScript -->
+  </div>
+</main>
 
 <script>
 fetch("index.json")
@@ -21,31 +49,88 @@ fetch("index.json")
     const id = new URLSearchParams(location.search).get("id");
     const r = data[id];
 
+    if (!r) {
+      document.getElementById("routeBox").innerHTML = `
+        <div class="text-center py-8">
+          <p class="text-xl text-red-600 font-semibold mb-4">Route not found</p>
+          <a href="index.html" class="text-[#76c044] hover:underline">Go back to home</a>
+        </div>
+      `;
+      return;
+    }
+
     document.getElementById("routeBox").innerHTML = `
-      <p class="text-slate-500 text-sm">The best route for you is</p>
-      <h1 class="text-2xl font-bold mb-6">
-        Route-${id}: ${r.route_name}
-      </h1>
-
-      <div class="grid grid-cols-2 gap-4 text-sm">
-        <div class="bg-slate-50 p-4 rounded-xl">
-          <p class="text-slate-500">Driver</p>
-          <p class="font-semibold">${r.driver_name}</p>
+      <div class="space-y-6 sm:space-y-8">
+        
+        <!-- HEADER -->
+        <div class="space-y-2">
+          <p class="text-xs sm:text-sm text-slate-500 font-medium uppercase tracking-wide">
+            Your Best Route
+          </p>
+          <h1 class="text-2xl sm:text-3xl lg:text-4xl font-bold text-slate-900 leading-tight">
+            Route-${id}: ${r.route_name}
+          </h1>
         </div>
 
-        <div class="bg-slate-50 p-4 rounded-xl">
-          <p class="text-slate-500">Contact</p>
-          <p class="font-semibold">${r.driver_contact}</p>
+        <!-- DRIVER INFO -->
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+          <div class="bg-gradient-to-br from-[#76c044]/10 to-[#76c044]/5 p-5 sm:p-6 rounded-2xl border border-[#76c044]/20">
+            <p class="text-xs sm:text-sm text-slate-600 font-medium mb-2">Driver</p>
+            <p class="text-lg sm:text-xl font-bold text-slate-900">${r.driver_name}</p>
+          </div>
+
+          <div class="bg-gradient-to-br from-blue-50 to-blue-50/50 p-5 sm:p-6 rounded-2xl border border-blue-100">
+            <p class="text-xs sm:text-sm text-slate-600 font-medium mb-2">Contact</p>
+            <a href="tel:${r.driver_contact}" class="text-lg sm:text-xl font-bold text-blue-600 hover:underline">
+              ${r.driver_contact}
+            </a>
+          </div>
         </div>
+
+        <!-- SCHOOL CONTACT -->
+        <div class="bg-slate-50 p-5 sm:p-6 rounded-2xl border border-slate-200">
+          <p class="text-xs sm:text-sm text-slate-600 font-medium mb-2">School Contact</p>
+          <p class="text-base sm:text-lg font-semibold text-slate-900">${r.school_contact}</p>
+        </div>
+
+        <!-- PICKUP STOPS -->
+        <div class="space-y-4">
+          <h2 class="text-lg sm:text-xl font-bold text-slate-900">Pickup Stops</h2>
+          
+          <div class="border-2 border-slate-200 rounded-2xl sm:rounded-3xl divide-y-2 divide-slate-100 overflow-hidden">
+            ${r.pickup_locations.map((l, index) => `
+              <div class="px-4 sm:px-6 py-4 sm:py-5 hover:bg-slate-50 transition-colors">
+                <div class="flex items-center gap-3 sm:gap-4">
+                  <div class="flex-shrink-0 w-8 h-8 sm:w-10 sm:h-10 rounded-full bg-[#76c044] text-white flex items-center justify-center font-bold text-sm sm:text-base">
+                    ${index + 1}
+                  </div>
+                  <p class="text-sm sm:text-base lg:text-lg font-medium text-slate-800 flex-1">
+                    ${l.name}
+                  </p>
+                </div>
+              </div>
+            `).join("")}
+          </div>
+        </div>
+
+        <!-- ACTION BUTTON -->
+        <div class="pt-4">
+          <a 
+            href="index.html"
+            class="block w-full sm:w-auto sm:inline-block text-center bg-[#76c044] hover:bg-[#68a93c] text-white px-8 py-4 rounded-2xl font-semibold text-base sm:text-lg transition-all duration-200 shadow-lg shadow-[#76c044]/20 hover:shadow-xl hover:shadow-[#76c044]/30 hover:-translate-y-0.5"
+          >
+            Search Another Route
+          </a>
+        </div>
+
       </div>
-
-      <div class="mt-6">
-        <p class="font-semibold mb-2">Pickup Stops</p>
-        <div class="border rounded-xl divide-y">
-          ${r.pickup_locations.map(l => `
-            <div class="px-4 py-3">${l.name}</div>
-          `).join("")}
-        </div>
+    `;
+  })
+  .catch(err => {
+    document.getElementById("routeBox").innerHTML = `
+      <div class="text-center py-8">
+        <p class="text-xl text-red-600 font-semibold mb-4">Failed to load route data</p>
+        <a href="index.html" class="text-[#76c044] hover:underline">Go back to home</a>
       </div>
     `;
   });
